[gd_scene load_steps=15 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Top Down Shooter Assets/weapons/3.png" type="Texture" id=2]
[ext_resource path="res://Top Down Shooter Assets/sounds/alert.wav" type="AudioStream" id=3]
[ext_resource path="res://Top Down Shooter Assets/characters/head/1.png" type="Texture" id=4]
[ext_resource path="res://Top Down Shooter Assets/characters/body/1.png" type="Texture" id=5]
[ext_resource path="res://Top Down Shooter Assets/characters/leg-animation.png" type="Texture" id=6]
[ext_resource path="res://Top Down Shooter Assets/sounds/Whoosh.wav" type="AudioStream" id=7]
[ext_resource path="res://Top Down Shooter Assets/sounds/death.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 15, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 30, 0, 15, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 45, 0, 15, 17 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
SPEED = 111

[node name="Model" type="Node2D" parent="."]
rotation = -1.5708

[node name="Legs" type="AnimatedSprite" parent="Model"]
position = Vector2( -2.5, 3 )
frames = SubResource( 5 )
speed_scale = 1.5
offset = Vector2( 0, 0.5 )

[node name="Body" type="Sprite" parent="Model"]
texture = ExtResource( 5 )

[node name="Head" type="Sprite" parent="Model"]
position = Vector2( 0, -3.5 )
texture = ExtResource( 4 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, -20 )

[node name="GunSprite" type="Sprite" parent="Gun"]
position = Vector2( -0.334084, -0.334087 )
texture = ExtResource( 2 )

[node name="BulletSpawnPoint" type="Position2D" parent="Gun"]
position = Vector2( 11, -4 )
__meta__ = {
"_gizmo_extents_": 3.1
}

[node name="Timer" type="Timer" parent="Gun"]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 1 )
shape = SubResource( 6 )
disabled = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DashReadySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.126

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.155

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
